// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`loading error 1`] = `
<div>
  MyLoadingComponent 
  {"isLoading":true,"pastDelay":false,"error":null}
</div>
`;

exports[`loading error 2`] = `
<div>
  MyLoadingComponent 
  {"isLoading":true,"pastDelay":true,"error":null}
</div>
`;

exports[`loading error 3`] = `
<div>
  MyLoadingComponent 
  {"isLoading":false,"pastDelay":false,"error":{}}
</div>
`;

exports[`loading success 1`] = `
<div>
  MyLoadingComponent 
  {"isLoading":true,"pastDelay":false,"error":null}
</div>
`;

exports[`loading success 2`] = `
<div>
  MyLoadingComponent 
  {"isLoading":true,"pastDelay":true,"error":null}
</div>
`;

exports[`loading success 3`] = `
<div>
  MyComponent 
  {"prop":"foo"}
</div>
`;

exports[`loading success 4`] = `
<div>
  MyComponent 
  {"prop":"bar"}
</div>
`;

exports[`preload 1`] = `
<div>
  MyLoadingComponent 
  {"isLoading":true,"pastDelay":false,"error":null}
</div>
`;

exports[`preload 2`] = `
<div>
  MyComponent 
  {"prop":"baz"}
</div>
`;

exports[`preload 3`] = `
<div>
  MyComponent 
  {"prop":"baz"}
</div>
`;

exports[`resolveModule 1`] = `
<div>
  MyLoadingComponent 
  {"isLoading":true,"pastDelay":false,"error":null}
</div>
`;

exports[`resolveModule 2`] = `
<div>
  MyLoadingComponent 
  {"isLoading":true,"pastDelay":true,"error":null}
</div>
`;

exports[`resolveModule 3`] = `
<div>
  MyComponent 
  {"prop":"baz"}
</div>
`;

exports[`server side rendering 1`] = `
<div>
  fixture1
</div>
`;

exports[`server side rendering es6 1`] = `
<div>
  fixture2
</div>
`;

exports[`server side rendering flushing 1`] = `
Array [
  "/Users/thejameskyle/Projects/react-loadable/__fixtures__/component.js",
  "/Users/thejameskyle/Projects/react-loadable/__fixtures__/component2.js",
]
`;

exports[`server side rendering flushing 2`] = `
Array [
  "/Users/thejameskyle/Projects/react-loadable/__fixtures__/component.js",
  "/Users/thejameskyle/Projects/react-loadable/__fixtures__/component3.js",
]
`;
